--- a/styles/prose.scss
+++ b/styles/prose.scss
@@ -1,5 +1,5 @@
 .kun-prose {
-  @apply text-default-800 leading-7;
+  @apply text-default-800 leading-7 whitespace-pre-line;
 }
 
 /* Paragraphs */
